--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
     "frontend": "npm start --prefix frontend",
-    "build": "npm install --legacy-peer-deps && npm install --prefix frontend --legacy-peer-deps && npm run build --prefix frontend"
+    "build": "npm install --legacy-peer-deps && npm install --prefix frontend --legacy-peer-deps --include=dev && npm run build --prefix frontend"
   },
   "author": "Sajal Srivastava",
   "license": "ISC",
